--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,75 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Portfolio</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<!DOCTYPE html>
+<html lang="pt_BR">
+  <head>
+    <meta charset="utf-8" />
+
+    <title>Philipi Bovo | Front End Developer</title>
+
+    <base href="/" />
+
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, minimum-scale=1, user-scalable=no"
+    />
+
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
+
+    <meta name="theme-color" content="#333333" />
+
+    <meta property="og:title" content="Philipi Bovo | Front End Developer" />
+    <meta
+      property="og:image"
+      content="https://philipi.bovo.me/assets/social.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="pt_BR" />
+    <meta property="og:site_name" content="Philipi Bovo" />
+    <meta property="og:url" content="https://philipi.bovo.me" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Philipi Bovo" />
+    <meta name="twitter:url" content="https://philipi.bovo.me" />
+    <meta
+      name="twitter:image"
+      content="https://limoney.app/assets/img/social.png"
+    />
+
+    <style type="text/css">
+      ::-webkit-scrollbar {
+        width: 8px;
+        height: 2px;
+      }
+      ::-webkit-scrollbar-button {
+        width: 0px;
+        height: 0px;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #b8b8b8;
+        border: 0px none #ffffff;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #b8b8b8;
+      }
+      ::-webkit-scrollbar-thumb:active {
+        background: #b8b8b8;
+      }
+      ::-webkit-scrollbar-track {
+        background: #666666;
+        border: 0px none #ffffff;
+      }
+      ::-webkit-scrollbar-track:hover {
+        background: #666666;
+      }
+      ::-webkit-scrollbar-track:active {
+        background: #666666;
+      }
+      ::-webkit-scrollbar-corner {
+        background: transparent;
+      }
+    </style>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
