--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Sistema Pamcard" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Philipi Bovo | Front End Developer</title>
 
     <base href="/" />
-
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, minimum-scale=1, user-scalable=no"
-    />
 
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
 
