SEO: Add description tag

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Sistema Pamcard" />
+    <meta
+      name="description"
+      content="Desenvolvedor Front End & Entusiasta em UX | Front End Developer & UX Enthusiast"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Philipi Bovo | Front End Developer</title>
