Add accessibilities options

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:url" content="https://philipi.bovo.me" />
     <meta
       name="twitter:image"
-      content="https://limoney.app/assets/img/social.png"
+      content="https://philipi.bovo.me/assets/social.png"
     />
 
     <style type="text/css">
