--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <title>Philipi Bovo | Front End Developer</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
@@ -9,11 +10,20 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Philipi Bovo | Front End Developer</title>
+    <link rel="canonical" href="https://www.fisiopole.com.br/" />
+
+    <meta
+      name="keywords"
+      content="frontend, front end, developer, ux, ui, angular, html, css, javascript"
+    />
+
+    <meta name="author" content="Philipi Bovo - https://philipi.bovo.me" />
 
     <base href="/" />
 
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
+
+    <meta name="robots" content="index, follow" />
 
     <meta name="theme-color" content="#333333" />
 
